[workspace]
members = [
    "dummy",
    "player",
    "wgpu-core",
    "wgpu-types",
]

[patch.crates-io]
gfx-hal = { git = "https://github.com/lachlansneff/gfx", rev = "01a81050eccc909428ab928c251ad8b1683fd45f" }
gfx-backend-vulkan = { git = "https://github.com/lachlansneff/gfx", rev = "01a81050eccc909428ab928c251ad8b1683fd45f" }
gfx-backend-empty = { git = "https://github.com/lachlansneff/gfx", rev = "01a81050eccc909428ab928c251ad8b1683fd45f" }
gfx-backend-metal = { git = "https://github.com/lachlansneff/gfx", rev = "01a81050eccc909428ab928c251ad8b1683fd45f" }
